Fixes for BigQuery and Databricks
## General
* Update to latest Jooq
* Properly cast variables if necessary

## BigQuery
* Update operators for comparison and aggregates

## Databricks
* Simplify introspection
* Use proper Dialect from Jooq